feat(auth): implement JWT authentication with login, register, refresh - Add AuthController with /login, /register, /refresh - Add DTOs: RegisterRequest, UserCreateRequest - Secure UserController with @PreAuthorize for admin - Configure JWT filter + SecurityConfig